import React from 'react';
import {StyleSheet, Text} from 'react-native';

const About = () => <Text style={styles.header}>About</Text>;

export default About;

const styles = StyleSheet.create({
  header: {
    fontSize: 20,
  },
});
